image not overlaping hero section issue solved

--- a/Projects/project1/style.css
+++ b/Projects/project1/style.css
@@ -231,6 +231,8 @@ img{
 .shop-section{
     display: flex;
     justify-content: space-evenly;
+    position: relative;
+    top: -40vh;
     
 }
 
